--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,15 @@
             <name>SpringSource Repository</name>
             <url>http://repo.springsource.org/release</url>
         </repository>
+
+        <repository>
+            <id>springsource-repository</id>
+            <name>Spring Maven Releases, Milestones, and Snapshots</name>
+            <url>http://repo.springsource.org/snapshot</url>
+        </repository>
     </repositories>
+
+
 
     <dependencies>
         <dependency>
@@ -48,6 +56,11 @@
             <version>3.1.2.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
